--- a/Web.config
+++ b/Web.config
@@ -16,10 +16,16 @@
         <add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
         <add assembly="System.Data.Entity.Design, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
       </assemblies>
-    <buildProviders><add extension=".edmx" type="System.Data.Entity.Design.AspNet.EntityDesignerBuildProvider" /></buildProviders></compilation>
+      <buildProviders>
+        <add extension=".edmx" type="System.Data.Entity.Design.AspNet.EntityDesignerBuildProvider" />
+      </buildProviders>
+    </compilation>
     <httpRuntime targetFramework="4.5" />
   </system.web>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
   </entityFramework>
-<connectionStrings><add name="rapidInfoEntities" connectionString="metadata=res://*/App_Code.rapidInfoModel.csdl|res://*/App_Code.rapidInfoModel.ssdl|res://*/App_Code.rapidInfoModel.msl;provider=System.Data.SqlServerCe.4.0;provider connection string=&quot;data source=|DataDirectory|\rapidInfo.sdf&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+  <connectionStrings>
+    <add name="rapidInfoEntities" connectionString="metadata=res://*/App_Code.rapidInfoModel.csdl|res://*/App_Code.rapidInfoModel.ssdl|res://*/App_Code.rapidInfoModel.msl;provider=System.Data.SqlServerCe.4.0;provider connection string=&quot;data source=|DataDirectory|\rapidInfo.sdf&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
+</configuration>
